# digital-logger-edd-python

./: README.md  pyproject.toml  requirements.txt
src/eddlogger/: __init__.py  logger.py  models.py  utils.py
src/eddlogger/drivers/: __init__.py  base.py  console.py  postgres.py  pubsub.py
tests/: test_logger.py
