[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddlogger"
version = "0.1.0"
description = "Digital EDD logger SDK for Python services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg>=3.1"]
pubsub = ["google-cloud-pubsub>=2.20.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
